[gd_scene load_steps=8 format=3 uid="uid://cowge2t74w0jm"]

[ext_resource type="Script" uid="uid://bhxl1k8me4rbh" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://bq8lbri08vmul" path="res://Assets/Sprites/sprite_sheet.png" id="1_hghv2"]
[ext_resource type="Resource" uid="uid://bepsuypj20mjb" path="res://Resources/standard_enemy.tres" id="2_afpow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f0kj"]
size = Vector2(8, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afpow"]
size = Vector2(6, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_hghv2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_287tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 140
motion_mode = 1
script = ExtResource("1_1f0kj")
data = ExtResource("2_afpow")

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollider" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_1f0kj")

[node name="Collider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_afpow")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_287tu")

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
